--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,9 +1,8 @@
-> Be it that when we suffer, we suffer less stupidly
-
-Hello,
-I'm Kimutai
+# Hi👋🏾 I'm Allan Kimutai
 
 Welcome to my repository of personal thoughts, lessons and answers to many stupid questions I will always ask
+
+> Let it be that when we suffer, we suffer less stupidly
 
 ## Now
 
