--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,39 +1,13 @@
 # Hi👋🏾 I'm Allan Kimutai
 
-Welcome to my repository of personal thoughts, lessons and answers to many stupid questions I will always ask
-
-> Let it be that when we suffer, we suffer less stupidly
+Welcome to my online repository of ever evolving personal thoughts, lessons, contemplations
 
 ## Now
 
-I'm currently a student KCA university ,Kenya, pursuing software development.
+I'm currently a student KCA university ,Kenya, pursuing Software Development.
 
 I always desire to learn new technology and apply it however I can.I code, self taught, and I dream to always apply it creatively,happily and productively and not in the confines of a cubicle
 
-I'm a indie hacker, and a indie lurker on the indie hacker community forum
+I'm a indie lurker on the Indie Hackers forum
 
-Existence.I'm trynna make sense of it all
-
-I'm wondering if what society tells me makes sense.Is it really good for me? why has it failed so much? Who's pulling the strings? What do I want? Do I have the stomach and discipline get what I really want? Or am I gonna be another victim of society!
-
-## More about me
-
-I'm a follower of Christ, a student of life, an artist and a creator.I'm also a victim of my ego, indiscipline and fear.
-
-> _The slugard says, "There is a lion outside! I'll be killed in the public square!"_ -Solomon in Proverbs 22:13(NIV)
-
-I love to ask questions and understand whatever interests me.There is always beauty in knowing and even more in knowing the uncommon.There is joy in seeking wonder.
-
-> there is beauty in what you don't understand...oh the joy of wonder
-
-I love life,conversations, authenticity and wisdom
-
-> _Wisdom is more precious than rubies; nothing you desire can compare with her_ - King Solomon in Proverbs 3:15(NIV)
-
-I'm human .I bleed.I smile.I cry.I fall I rise.I learn ✨
-
-I desire to know how to suffer less stupidly and to do life better - just like you.
-
-I post the notes from those stupid questions here and I hope you take away something.Progress is tangible.Illusive, but tangible
-
-I'm figuring out how to suffer less stupidly and do life better.Take a look and see the scars and trophies I've won on this journey...and of cause the notes to my questions 😉
+I'm a follower of Christ, a student of life, explorer, adventurer an artist.I'm also a victim of my ego, indiscipline and I rejoice for the lord helps me fight my will daily and perfects me.These things I dont boast of shall soon be gone☺️
