update index mdx

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,12 +2,6 @@
 
 Welcome to my online repository of ever evolving personal thoughts, lessons, contemplations
 
-## Now
-
 I'm currently a student KCA university ,Kenya, pursuing Software Development.
 
-I always desire to learn new technology and apply it however I can.I code, self taught, and I dream to always apply it creatively,happily and productively and (hopefully) not in the confines of a cubicle.I take projects😁 and I would be honored to build you and/or your organization a website or app.
-
-I'm a follower of Christ, a student of life, explorer, adventurer and an artist.I'm also a victim of my ego, indiscipline and I rejoice for the Lord helps me fight my will daily and perfects me.
-
-You can also follow me on [Twitter](https://twitter.com/kimutai_io)
+I'm a follower of Christ, a student of life, explorer, adventurer and an artist.I am not perfect, but I rejoice for the Lord perfects me daily
