--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 # Hi👋🏾 I'm Allan Kimutai
 
-Welcome to my online repository of ever evolving personal thoughts, lessons, contemplations
+Welcome to my online repository of ever evolving personal thoughts, lessons, contemplations and more.
 
-I'm currently a student KCA university ,Kenya, pursuing Software Development.
+I'm currently a student at KCA university Kenya, pursuing Software Development.
 
-I'm a follower of Christ, a student of life, explorer, adventurer and an artist.I am not perfect, but I rejoice for the Lord perfects me daily
+I'm a follower of Christ, explorer, adventurer and an artist.
