--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 # Hi👋🏾 I'm Allan Kimutai
 
-Welcome to my online repository of ever evolving personal thoughts, lessons, contemplations and more.
+Welcome to my online repository thoughts, lessons, contemplations and more.
 
 I'm currently a student at KCA university Kenya, pursuing Software Development.
 
