--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,6 +6,11 @@ I'm currently a student at KCA university Kenya, pursuing Software Development.
 
 Welcome to my online repository where I share the little that I know about life in the hope to help others who maybe have questions that I'm finding answers for -this  by God's mercies.I do hope this blog will be a blessing to you...to us all🥳
 
-The areas that i have found myself to have many questions **freedom (from anything that binds)**, **knowing God (through his word)**...What I've learnt however is that everything is in the word of God..all there answers are in the word of God..that is why we should read the word(Bible) daily and deek understanding from God.Understanding God's word brings freedom in so many ways than you could imagine.On the other hand, listening to what men have made of it could be misleading and leads to bondage.**Go read the word for yourself!** and may God grant us that capacity and understanding, so that we are free and (accepting Jesus, is freedom and in doing this he will set you free and free indeed are you free?) knowing and understadning the word shows you how free you are and enables you to live life as God intended you to..I would say a **rich life** but the prosperity gospel has perverted that phrase(but you know what I mean)
+My areas of interest are; **Knowing God** through His word,**Growth**(obviously),**Freedom**,**Coding**,🤔🤔
 
+We all have many questions.What I've come to learn is that everything is in the word of God..all the answers are in the word of God...that is why we should read the word(Bible) daily and seek understanding from God.Understanding God's word brings freedom in so many ways than you could imagine.On the other hand, listening to what men have made of it could be misleading and leads to bondage.**Go read the word for yourself!**.May God grant us the capacity to read,study and understand His word.It will free us in many ways.
+
+Accepting Jesus, is freedom and in doing this he will set you free and free indeed(John 8:36).Are you free?
+
+Knowing and understanding the word shows you how free you are and enables you to live life as God intended you to...I would say a rich life but the prosperity gospel has perverted that phrase(but you know what I mean)
 
