--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,14 +1,14 @@
 # Hi👋🏾 I'm Allan Kimutai
 
-I'm a follower of Christ,a child of God,explorer and adventurer.I also code(self taught mostly😁😅[as if not all coders are self taught😂😂])
+I'm a follower of Christ,explorer and adventurer.I also code(self taught mostly😁😅 [as if all coders are not self taught😂😂])
 
-I'm currently a student at KCA university Kenya, pursuing Software Development.
+I'm currently a student at KCA university Kenya, pursuing a Bachelor's degree in Software Development.
 
-Welcome to my online repository where I share the little that I know about life in the hope to help others who maybe have questions that I'm finding answers for -this  by God's mercies.I do hope this blog will be a blessing to you...to us all🥳
+Welcome to my online repository where I share the little that I know about present day living in the hope to help others who may have questions that I have had myself .I do hope this blog will be a blessing to you...to us all🥳
 
-My areas of interest are; **Knowing God** through His word,**Growth**(obviously),**Freedom**,**Coding**,🤔🤔
+My areas of interest are; **Knowing God** through His word, **Growth**(obviously), **Freedom**, **Coding**, 🤔🤔
 
-We all have many questions.What I've come to learn is that everything is in the word of God..all the answers are in the word of God...that is why we should read the word(Bible) daily and seek understanding from God.Understanding God's word brings freedom in so many ways than you could imagine.On the other hand, listening to what men have made of it could be misleading and leads to bondage.**Go read the word for yourself!**.May God grant us the capacity to read,study and understand His word.It will free us in many ways.
+We all have many questions.What I've come to learn is that everything is in the word of God..all the answers are in the word of God...that is why we should read the word(Bible) daily and seek understanding from God.Understanding God's word brings freedom in so many ways than you could imagine.On the other hand, listening to what men have made of it could be misleading and often leads to bondage.**Lets read the word for ourselves!**.May God grant us the capacity to read,study and understand His word.It will free us in many ways.
 
 Accepting Jesus, is freedom and in doing this he will set you free and free indeed(John 8:36).Are you free?
 
